freest/test/prog/Invalid/Parsing/LexicalError/LexicalError.fst
module LexicalError where

s : String
s = a ~ b
